<resources>
    <string name="app_name">ParkScout</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_log_in">logInActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="profile_pic">Profile pic</string>
    <string name="title_activity_park_full_details">Park_full_details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="map_key">AIzaSyAnuIy58d0pc8fZtclTxjqyqzDD1L3K1ek</string>
    <string name="tennis">tennis</string>
    <string name="tennisId">1</string>
    <string name="soccer">soccer</string>
    <string name="soccerId">2</string>
    <string name="basketball">basketball</string>
    <string name="basketbalId">3</string>
    <string name="volleyball">volleyball</string>
    <string name="vollyballId">4</string>
    <string name="gym_park">gym park</string>
    <string name="gymId">5</string>
    <string name="other">Other</string>
    <string name="OtherId">6</string>
</resources>